Changes to Web Content

--- a/web_content/index.html
+++ b/web_content/index.html
@@ -2,11 +2,12 @@
 
 <head>
   <title>Hello World</title>
-</head>
+</head> 
 
 <body>
   <h1>Hello World</h1>
-  <p>Welcome to Blake's site</p>
+  <p>Welcome to Anthony's site. Beep Boope Bap yada yada yada yada yada yada yada yada yad ayb ady y adkjhdglkjhdsglkjbaerf
+  </p>
 </body>
 
 </html>
